create basic landing page

--- a/src/index.html
+++ b/src/index.html
@@ -11,27 +11,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Saira+Condensed:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div>
-            <a>Work</a>
+    <header class="menu">
+        <div class="left-menu">
+            <a href="#" class="link">Work</a>
         </div>
-        <div>
+        <div class="logo">
             <h3>313</h3>
         </div>
-        <div>
-            <a>About</a>
+        <div class="right-menu">
+            <a href="#" class="link">About</a>
         </div>
     </header>
 
-    <section>
-        <div>
-            <h1>Prynss Maia</h1>
-            <h3>Currently learning</h3>
-            <h3>and uploading some projects</h3>
+    <section class="container hero">
+        <div class="container-item">
+            <h1 class="text-right">Prynss Maia</h1>
+            <h3 class="mask text-right">Currently learning</h3>
+            <h3 class="mask text-right">and uploading some projects</h3>
+            
         </div>
-        <div>
-            <h1>red sun</h1>
-        </div>
+        <div class="container-item">
+            <img src="/public/red-sun.svg" alt="Synthwave sun">
+        </div>        
     </section>
+    <div class="button">
+        <button class="btn-square">
+            <a href="" class="square">Get in touch</a>
+        </button>
+    </div>
 </body>
 </html>
