--- a/src/index.html
+++ b/src/index.html
@@ -1,78 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>313 Project - Portifolio</title>
-    <link rel="stylesheet" href="/public/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Saira+Condensed:wght@300;400;500&display=swap" rel="stylesheet">
-</head>
-<body class="">
+    <link rel="stylesheet" href="/public/style.css" />
+    <link rel="stylesheet" href="/public/icons/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Saira+Condensed:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="">
     <header class="menu" id="site-header">
-        <div class="left-menu show">
-            <a href="#about" class="link">About</a>
-        </div>
-        <div class="logo">
-            <h3>313</h3>
-        </div>
-        <div class="right-menu show">
-            <a href="#projects" class="link">Projects</a>
-        </div>
+      <div class="left-menu show">
+        <a href="#about" class="link">About</a>
+      </div>
+      <div class="logo">
+        <h3>313</h3>
+      </div>
+      <div class="right-menu show">
+        <a href="#projects" class="link">Projects</a>
+      </div>
     </header>
 
     <main>
-        <!-- FIXME - Remover parallax effect -->
-        <section class="parallax">
-            <div class="glow">
-                <img class="mountain-glow" src="/public/mountain-glow.svg" alt="Background mountain glow">
-            </div>
-            <div class="mountains">
-                <img class="mountain-left" src="/public/mountain-left.svg" alt="Mointain">
-                <img class="mountain-right" src="/public/mountain-right.svg" alt="Mointain">
-            </div>
-        </section>
-
-        <section class="container hero">
-            <div class="container-item">
-                <h1 class="">Prynss Maia</h1>
-                <h3 class="mask text-right">Currently learning</h3>
-                <h3 class="mask text-right">and uploading some projects</h3>
-
-            </div>
-            <div class="container-item">
-                <img src="/public/red-sun.svg" alt="Synthwave sun">
-            </div>        
-        </section>
-        <div class="button">
-            <button class="btn-square">
-                <a href="#contact" class="square">Get in touch</a>
-            </button>
+      <!-- FIXME - Remover parallax effect -->
+      <section class="parallax">
+        <div class="glow">
+          <img
+            class="mountain-glow"
+            src="/public/mountain-glow.svg"
+            alt="Background mountain glow"
+          />
         </div>
+        <div class="mountains">
+          <img
+            class="mountain-left"
+            src="/public/mountain-left.svg"
+            alt="Mointain"
+          />
+          <img
+            class="mountain-right"
+            src="/public/mountain-right.svg"
+            alt="Mointain"
+          />
+        </div>
+      </section>
 
-        <section class="container" id="about">
-            <div class="container-item">
-                <h1>About</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, sunt! Consequuntur nihil veritatis nulla numquam officiis dolores illo. Praesentium sit assumenda vitae saepe officiis dolorem dignissimos ipsum incidunt qui temporibus.</p>
-            </div>
-        </section>
+      <section class="container hero">
+        <div class="container-item">
+          <h1 class="">Prynss Maia</h1>
+          <h3 class="mask text-right">Currently learning</h3>
+          <h3 class="mask text-right">and uploading some projects</h3>
+        </div>
+        <div class="container-item">
+          <img src="/public/red-sun.svg" alt="synthwave sun" />
+        </div>
+      </section>
+      <div class="button">
+        <button class="btn-square">
+          <a href="#contact" class="square">Get in touch</a>
+        </button>
+      </div>
 
-        <section class="container" id="projects">
-            <div class="container-item">
-                <h1>Projects</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem fugit hic rerum in et quasi dignissimos ab, facilis maiores quidem sed repellat eveniet perspiciatis corrupti sequi ipsa reiciendis provident asperiores.</p>
-            </div>
-        </section>
+      <section class="container" id="about">
+        <div class="container-item">
+          <h1>About</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+            architecto eveniet, tenetur incidunt fugit nesciunt qui eius
+            accusamus facilis beatae voluptatibus impedit dicta ex sapiente cum
+            ullam commodi fuga, delectus molestiae. Commodi, possimus dicta.
+            Sapiente quia ducimus quod saepe ut.
+          </p>
+          <div class="button-container">
+              <button class="btn-square">
+                  <a href="#" class="square">
+                      <i class="icon-github"></i>
+                      GitHub
+                  </a>
+              </button>
+              <button class="btn-square">
+                  <a href="#" class="square">
+                      <i class="icon-linkedin"></i>
+                      Linkedin
+                  </a>
+              </button>
+              <button class="btn-square">
+                  <a href="#" class="square">
+                      <i class="icon-outlook"></i>
+                      E-mail
+                  </a>
+              </button>
+          </div>
+        </div>
+        <div class="container-item">
+          <img src="/public/red-square.svg" alt="synthwave square" />
+        </div>
+      </section>
 
-        <section class="container" id="contact">
-            <div class="container-item">
-                <h1>Contact</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, facilis?</p>
-            </div>
-        </section>
+      <section class="container" id="projects">
+        <div class="container-item">
+          <h1>Projects</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem fugit
+            hic rerum in et quasi dignissimos ab, facilis maiores quidem sed
+            repellat eveniet perspiciatis corrupti sequi ipsa reiciendis
+            provident asperiores.
+          </p>
+        </div>
+      </section>
+
+      <section class="container" id="contact">
+        <div class="container-item">
+          <h1>Contact</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
+            facilis?
+          </p>
+        </div>
+      </section>
     </main>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
