--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="">
+  <body class="bg-image">
     <header class="menu" id="site-header">
       <div class="left-menu show">
         <a href="#about" class="link">About</a>
