remove parallax test

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           <h3 class="mask text-right">and uploading some projects</h3>
         </div>
         <div class="container-item">
-          <img src="/public/red-sun.svg" alt="synthwave sun" />
+          <img class="" src="/public/red-sun.svg" alt="synthwave sun" />
         </div>
       </section>
       <div class="button">
