add page elements

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,13 @@
         <div class="container-item">
           <img class="" src="/public/red-sun.svg" alt="synthwave sun" />
         </div>
+
+        <div class="page-elements">
+          <img src="/public/tri-top-right.svg" alt="neon triangles at top right">
+          <img src="/public/tri-top-center.svg" alt="neon triangles at top center">
+          <img src="/public/tri-bottom-left.svg" alt="neon triangles at bottom left">
+        </div>
+
       </section>
       <div class="button">
         <button class="btn-square">
