add: basic html menu and hero structure

--- a/index.html
+++ b/index.html
@@ -14,36 +14,23 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-image">
-    <header class="menu" id="site-header">
-      <div class="left-menu show">
-        <a href="#projects" class="link">Projects</a>
-      </div>
-      <div class="logo">
-        <h3>313</h3>
-      </div>
-      <div class="right-menu show">
-        <a href="#about" class="link">About</a>
+  <body>
+    <header>
+      <div>
+        <h3>LOGO 313</h3>
+        <div>MENU</div>
       </div>
     </header>
 
     <main>
-      <section class="container hero">
-        <div class="container-item">
+      <section>
+          <img class="" src="red-sun.svg" alt="" />
           <h1 class="">Prynss Maia</h1>
-          <h3 class="mask text-right">Currently learning</h3>
-          <h3 class="mask text-right">and uploading some projects</h3>
-        </div>
-        <div class="container-item">
-          <img class="" src="red-sun.svg" alt="synthwave sun" />
-        </div>
+          <h3>Currently learning</h3>
+          <h3>and uploading some projects</h3>
+          <a href="#contact" class="square">Prjects</a>
       </section>
-      <div class="button">
-        <button class="btn-square">
-          <a href="#contact" class="square">Get in touch</a>
-        </button>
-      </div>      
     </main>
-    <script src="main.js"></script>
+
   </body>
 </html>
