add: update html and css

--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>313 Project - Portifolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="/public/icons/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Saira+Condensed:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <div>
-        <h3>LOGO 313</h3>
-        <div>MENU</div>
-      </div>
-    </header>
 
-    <main>
-      <section>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>313 Project - Portifolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/public/icons/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Saira+Condensed:wght@300;400;500&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <header id="header">
+    <nav class="container">
+      <a class="logo" href="#">313 <span>Project</spanc></a>
+      <div class="menu"><a>MENU</a></div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="section" id="home">
+      <div class="container grid">
+        <div class="image">
           <img class="" src="red-sun.svg" alt="" />
+        </div>
+        <div class="text">
           <h1 class="">Prynss Maia</h1>
           <h3>Currently learning</h3>
           <h3>and uploading some projects</h3>
           <a href="#contact" class="square">Prjects</a>
-      </section>
-    </main>
+        </div>
+      </div>
+    </section>
+  </main>
 
-  </body>
+</body>
+
 </html>
