add: create cta button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h1 class="">Prynss Maia</h1>
           <h3>Currently learning</h3>
           <h3>and uploading some projects</h3>
-          <a href="#contact" class="square">Prjects</a>
+          <a href="#contact" class="button">Projects</a>
         </div>
       </div>
     </section>
