add: finish hero section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     rel="stylesheet" />
 </head>
 
-<body>
+<body class="bg-image">
   <header id="header">
     <nav class="container">
       <a class="logo" href="#">313 <span>Project</spanc></a>
@@ -23,7 +23,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="">
     <section class="section" id="home">
       <div class="container grid">
         <div class="image">
@@ -31,8 +31,7 @@
         </div>
         <div class="text">
           <h1 class="">Prynss Maia</h1>
-          <h3>Currently learning</h3>
-          <h3>and uploading some projects</h3>
+          <h3 class="mask">Currently learning and uploading some projects</h3>
           <a href="#contact" class="button">Projects</a>
         </div>
       </div>
@@ -40,5 +39,7 @@
   </main>
 
 </body>
+
+<script src="https://kit.fontawesome.com/179d65aa29.js" crossorigin="anonymous"></script>
 
 </html>
