add: basic navigation menu structure

--- a/index.html
+++ b/index.html
@@ -17,9 +17,26 @@
 
 <body class="bg-image">
   <header id="header">
-    <nav class="container">
+    <nav class="container show">
       <a class="logo" href="#">313 <span>Project</spanc></a>
-      <div class="menu"><a>MENU</a></div>
+      <div class="menu">
+        <ul class="grid">
+          <li>
+            <a class="title" href="#home">Home</a>
+          </li>
+          <li>
+            <a class="title" href="#projects">Projects</a>
+          </li>
+          <li>
+            <a class="title" href="#about">About</a>
+          </li>
+          <li>
+            <a class="title" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div class="open">...</div>
+      <div class="close">X</div>
     </nav>
   </header>
 
@@ -30,12 +47,25 @@
           <img class="" src="red-sun.svg" alt="" />
         </div>
         <div class="text">
-          <h1 class="">Prynss Maia</h1>
+          <h1 class="title">Prynss Maia</h1>
           <h3 class="mask">Currently learning and uploading some projects</h3>
-          <a href="#contact" class="button">Projects</a>
+          <a href="#contact" class="button">Enjoy the ride</a>
         </div>
       </div>
     </section>
+
+    <section class="section" id="projects">
+      <div class="container grid">
+        <h2 class="title">Projects</h2>
+      </div>
+    </section>
+
+    <section class="section" id="about">
+      <div class="container grid">
+        <h2 class="title">About</h2>
+      </div>
+    </section>
+
   </main>
 
 </body>
