add: click event on menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="bg-image">
   <header id="header">
-    <nav class="container show">
+    <nav class="container">
       <a class="logo" href="#">313 <span>Project</spanc></a>
       <div class="menu">
         <ul class="grid">
@@ -35,8 +35,8 @@
           </li>
         </ul>
       </div>
-      <div class="open">...</div>
-      <div class="close">X</div>
+      <div class="toogle open"><i class="fa-solid fa-bars"></i></div>
+      <div class="toogle close"><i class="fa-solid fa-xmark"></i></div>
     </nav>
   </header>
 
@@ -71,5 +71,6 @@
 </body>
 
 <script src="https://kit.fontawesome.com/179d65aa29.js" crossorigin="anonymous"></script>
+<script src="main.js"></script>
 
 </html>
