add: basic cards structure

--- a/index.html
+++ b/index.html
@@ -54,15 +54,61 @@
       </div>
     </section>
 
-    <section class="section" id="projects">
-      <div class="container grid">
-        <h2 class="title">Projects</h2>
-      </div>
-    </section>
-
     <section class="section" id="about">
       <div class="container grid">
         <h2 class="title">About</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis error cupiditate blanditiis, amet quas eligendi
+          sint ut. Voluptatum, aspernatur impedit!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam inventore dolores enim. Ab reprehenderit, quo magnam
+          repellat sint quos harum voluptas iure neque asperiores voluptatem dolorum commodi ullam rerum alias.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In impedit rerum nesciunt qui animi, placeat totam rem,
+          molestias ipsa expedita eum magni aut. Iusto optio, quod veritatis qui culpa illum.</p>
+      </div>
+    </section>
+
+    <section class="section" id="projects">
+      <div class="container grid">
+        <h2 class="title">Projects</h2>
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8d2ViJTIwYXBsaWNhdGlvbnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="">
+          <div class="card-content">
+            <h3 class="card-title">VERSION CHECKER</h3>
+            <p class="card-subtitle">Web application</p>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, alias.</p>
+            <div class="social">
+              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-figma"></i>
+              <i class="fa-regular fa-share-from-square"></i>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://media.istockphoto.com/photos/emails-list-on-a-laptop-screen-office-workspace-picture-id1195164438?b=1&k=20&m=1195164438&s=170667a&w=0&h=2U3OIHkXxk54m86GsSF9UztmwLRMUPSXy7uOffME6Fc=" alt="">
+          <div class="card-content">
+            <h3 class="card-title">Loren Ipsun</h3>
+            <p class="card-subtitle">Loren Ipsun</p>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, alias.</p>
+            <div class="social">
+              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-figma"></i>
+              <i class="fa-regular fa-share-from-square"></i>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://images.unsplash.com/photo-1529775768124-fb874e73ac7e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fG1hcCUyMGFwcHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="">
+          <div class="card-content">
+            <h3 class="card-title">Loren Ipsun</h3>
+            <p class="card-subtitle">Loren Ipsun</p>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, alias.</p>
+            <div class="social">
+              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-figma"></i>
+              <i class="fa-regular fa-share-from-square"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
