add: lib scroll reveal

--- a/index.html
+++ b/index.html
@@ -54,18 +54,6 @@
       </div>
     </section>
 
-    <section class="section" id="about">
-      <div class="container grid">
-        <h2 class="title">About</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis error cupiditate blanditiis, amet quas eligendi
-          sint ut. Voluptatum, aspernatur impedit!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam inventore dolores enim. Ab reprehenderit, quo magnam
-          repellat sint quos harum voluptas iure neque asperiores voluptatem dolorum commodi ullam rerum alias.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In impedit rerum nesciunt qui animi, placeat totam rem,
-          molestias ipsa expedita eum magni aut. Iusto optio, quod veritatis qui culpa illum.</p>
-      </div>
-    </section>
-
     <section class="section" id="projects">
       <div class="container grid">
         <h2 class="title">Projects</h2>
@@ -112,11 +100,24 @@
       </div>
     </section>
 
+    <section class="section" id="about">
+      <div class="container grid">
+        <h2 class="title">About</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis error cupiditate blanditiis, amet quas eligendi
+          sint ut. Voluptatum, aspernatur impedit!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam inventore dolores enim. Ab reprehenderit, quo magnam
+          repellat sint quos harum voluptas iure neque asperiores voluptatem dolorum commodi ullam rerum alias.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In impedit rerum nesciunt qui animi, placeat totam rem,
+          molestias ipsa expedita eum magni aut. Iusto optio, quod veritatis qui culpa illum.</p>
+      </div>
+    </section>
+
   </main>
 
 </body>
 
 <script src="https://kit.fontawesome.com/179d65aa29.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/scrollreveal"></script>
 <script src="main.js"></script>
 
 </html>
