--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
 
   </main>
 
+  <a href="#home" class="back-to-top">
+    <i class="fa-solid fa-arrow-up"></i>
+  </a>
+  
+
 </body>
 
 <script src="https://kit.fontawesome.com/179d65aa29.js" crossorigin="anonymous"></script>
