add: responsiveness study

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <img class="" src="red-sun.svg" alt="" />
         </div>
         <div class="text">
-          <h1 class="title">Prynss Maia</h1>
+          <h1 class="title-hero">Prynss Maia</h1>
           <h3 class="mask">Currently learning and uploading some projects</h3>
           <a href="#contact" class="button">Enjoy the ride</a>
         </div>
