fix: change hero image section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     rel="stylesheet" />
 </head>
 
-<body class="bg-image">
+<body class="">
   <header id="header">
     <nav class="container">
       <a class="logo" href="#">313 <span>Project</spanc></a>
@@ -41,8 +41,8 @@
   </header>
 
   <main class="">
-    <section class="section" id="home">
-      <div class="container grid">
+    <section class="section bg-image" id="home">
+      <div class="container-hero grid">
         <div class="image">
           <img class="" src="red-sun.svg" alt="" />
         </div>
