--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="text">
           <h1 class="title-hero">Prynss Maia</h1>
           <h3 class="mask">Currently learning and uploading some projects</h3>
-          <a href="#contact" class="button">Enjoy the ride</a>
+          <a href="#projects" class="button">Enjoy the ride</a>
         </div>
       </div>
     </section>
