--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,18 @@
 </head>
 <body class="bg-theme text-b">
     <div class="px-6 h-screen bg-portait bg-no-repeat bg-cover md:px-14 lg:px-24 w-full">
+
         <!-- Hero Section -->
         <header class="py-6 bg-nav">
-            <nav class="text-white font-body">
-                <ul class="flex justify-center items-center gap-8 hidden md:flex space-x-12">
-                    <li><a class="transition linear delay-75 hover:text-theme"href="#projects">Projects</a></li>
-                    <li><a class="transition linear delay-75 hover:text-theme"href="#home" class="text-lg font-bold">313 Project</a></li>
-                    <li><a class="transition linear delay-75 hover:text-theme"href="#about">About</a></li>
-                </ul>
+            <nav class="text-white font-body flex justify-between items-center mx-auto text-xl tracking-wide w-full">
+                
+                <div class="font-title font-bold text-2xl tracking-wider"><span class="text-theme">313</span> Project</div>
+                <div class="gap-8 hidden md:flex space-x-12 items-center">
+                    <a class="transition linear delay-75 hover:text-theme" href="#projects">Projects</a>
+                    <a class="transition linear delay-75 hover:text-theme" href="#about">About</a>
+                    <a class="transition linear delay-75 hover:text-theme" href="#contact">Contact</a>
+                </div>
+
                 <div class="md:hidden flex justify-end">
                     <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M3.28625 12.7404H21.2863" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
