add 313 projects logo

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,13 @@
         <header class="py-6 bg-nav">
             <nav class="text-white font-body flex justify-between items-center mx-auto text-xl tracking-wide w-full">
                 
-                <div class="font-title font-bold text-2xl tracking-wider"><span class="text-theme">313</span> Project</div>
+                <div class="font-title font-bold text-2xl tracking-wider">
+                    <svg width="47" height="48" viewBox="0 0 523 540" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M490.697 307H32.2999L67.1218 347H400.993L354.863 400H168.592L203.412 440H320.041L261.75 507L246.924 490H191.588L235.081 540H287.886L490.697 307Z" fill="white"/>
+                        <path d="M234.276 64H179.329L139.367 110H194.314L206.802 95.5L254.257 150H159.506L124.685 190H289.224L323.907 230H34.9666L0 270H413.605L234.276 64Z" fill="white"/>
+                        <path d="M288.224 0H235.275L200.309 40H255.256L261.75 33L468.053 270H523L288.224 0Z" fill="white"/>
+                    </svg>                        
+                </div>
                 <div class="gap-8 hidden md:flex space-x-12 items-center">
                     <a class="transition linear delay-75 hover:text-theme" href="#projects">Projects</a>
                     <a class="transition linear delay-75 hover:text-theme" href="#about">About</a>
