--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="PT-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello • Prynss Maia Portfólio</title>
+    <title>Hello • Prynss Maia • Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
